Added JUnit testing and created LoginTest class