@@ -6,30 +6,18 @@ import static org.junit.jupiter.api.Assertions.*;
 
 class LoginTest {
 
+    /*Add these VM options for running tests:
+
+    --add-opens org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
+    --add-opens org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
+
+     */
+
     @Test
     void validateLoginTest_BeforeLogin() {
         Login login = new Login();
         boolean result = login.validateLogin();
         assertFalse(result);
-    }
-    @Test
-    void validateLoginTest_AfterLogin() {
-        Login login = new Login();
-        boolean result = login.validateLogin();
-        assertTrue(result);
-    }
-    @Test
-    void setOnLoginSuccessTest() {
-        // Setup
-        Login login = new Login();
-        boolean[] callbackExecuted = {false};
-        login.setOnLoginSuccess(() -> callbackExecuted[0] = true);
-
-        // Trigger login via public method (ex:, button click handler)
-        login.verifyLogin("test", "12345678"); // Public method that calls private verifyLogin()
-
-        // Verify
-        assertTrue(callbackExecuted[0], "Callback should run after successful login");
     }
 
 }
